Now a console app.

--- a/ProductionDataConversion-01.vbproj
+++ b/ProductionDataConversion-01.vbproj
@@ -5,12 +5,12 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{BCAC5982-97C3-4511-A685-E74D83C979FC}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
-    <StartupObject>ProductionDataConversion_01.My.MyApplication</StartupObject>
+    <OutputType>Exe</OutputType>
+    <StartupObject>Sub Main</StartupObject>
     <RootNamespace>ProductionDataConversion_01</RootNamespace>
     <AssemblyName>ProductionDataConversion-01</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <MyType>WindowsForms</MyType>
+    <MyType>Console</MyType>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
