--- a/ProductionDataConversion-01.vbproj
+++ b/ProductionDataConversion-01.vbproj
@@ -122,5 +122,8 @@
     </None>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="IsGood.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
